--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,10 +1,12 @@
 <h1>Home</h1>
+<div><a href="http://localhost:3000/signup">Sign Up!</a></div>
+
 <form action="/spotlist" method="GET">
-  <label for="spots">Choose a break type</label>
-  <select id="breaks" name="breaktypes">
-    <option value="beach">beach</option>
-    <option value="reef">reef</option>
-    <option value="point">point</option>
-  </select>
-  <button type="submit">Search for your type</button>
+    <label for="spots">Choose a break type</label>
+    <select id="breaks" name="breaktypes">
+        <option value="beach">beach</option>
+        <option value="reef">reef</option>
+        <option value="point">point</option>
+    </select>
+    <button type="submit">Search for your type</button>
 </form>
