--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,7 +10,10 @@
 </head>
 
 <body>
-  <div><a href="http://localhost:3000/signup">Sign Up!</a></div>
+  <nav>
+    <div><a href="http://localhost:3000/signup">Sign Up!</a></div>
+    <div><a href="http://localhost:3000/login">Log In</a></div>
+  </nav>
 
   {{{body}}}
 
