--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,8 +11,12 @@
 
 <body>
   <nav>
-    <div><a href="http://localhost:3000/signup">Sign Up!</a></div>
-    <div><a href="http://localhost:3000/login">Log In</a></div>
+    {{#if user}}
+    <a href="/logout">Log out</a>
+    {{else}}
+    <div><a href="/auth/signup">Sign Up!</a></div>
+    <div><a href="/auth/login">Log In</a></div>
+    {{/if}}
   </nav>
 
   {{{body}}}
