route to spotdetail

--- a/views/spotlist.hbs
+++ b/views/spotlist.hbs
@@ -4,6 +4,6 @@
 
 <h2>{{@key}}</h2>
 {{#each this}}
-<p><a href="/spotDetail">{{this}}</a></p>
+<p><a href="spotlist/detail/{{this.id}}">{{this.name}}</a></p>
 {{/each}}
 {{/each}}
