added additional infos and coordinates

--- a/views/detail.hbs
+++ b/views/detail.hbs
@@ -21,4 +21,10 @@
       <img src="{{weather}}" alt="{{overview.weather.condition}}">
       <span>{{overview.weather.temperature}}°C</span>
     </div>
+    <div>recommended ability level:
+      <span>{{levels}}</span>
+    </div>
+    <div>recommended board type:
+      <span>{{boards}}</span>
+    </div>
   </div>
