added previous tide

--- a/views/detail.hbs
+++ b/views/detail.hbs
@@ -7,6 +7,7 @@
       <p>{{waveInfo.relation}}</p>
     </div>
     <div>current tide <span>{{overview.tide.current.height}}m</span><br>
+      <span>{{previousTideInfo.type}}Tide {{previousTideInfo.height}}m at {{tideTimeprev}}</span><br>
       <span>{{nextTideInfo.type}}Tide {{nextTideInfo.height}}m at {{tideTime}}</span>
     </div>
     <div>Wind <span>{{windInfo.speed}}</span><br>
