--- a/views/detail.hbs
+++ b/views/detail.hbs
@@ -1,5 +1,20 @@
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>{{title}}</title>
+  <script src="https://api.mapbox.com/mapbox-gl-js/v1.7.0/mapbox-gl.js"></script>
+  <link href="https://api.mapbox.com/mapbox-gl-js/v1.7.0/mapbox-gl.css" rel="stylesheet" />
+  {{!-- <style>
+    #map {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      width: 100%;
+    }
+  </style> --}}
+</head>
 <h1>Spot Overview</h1>
-
 <h2>{{info.0.name}} {{info.0.type}}break</h3>
   <div class="forecast-overview">
     <div>
@@ -28,3 +43,22 @@
       <span>{{boards}}</span>
     </div>
   </div>
+  <div id="map" style="width:500px; height:500px;"></div>
+  <script>
+    mapboxgl.accessToken =
+      "pk.eyJ1Ijoic2hhdWxpdHRvIiwiYSI6ImNrNmk5dGZldTAyaWEza25udHMyMmsyM2wifQ.4Y2j_O7W5UvuwxXH7VDeEw";
+    var coords = {{{ location }}}
+    coords = [coords.x, coords.y]
+    console.log(coords)
+    var map = new mapboxgl.Map({
+      container: "map",
+      style: "mapbox://styles/mapbox/light-v10",
+      center: coords,
+      zoom: 13
+    });
+
+    // create the marker
+    new mapboxgl.Marker()
+      .setLngLat(coords)
+      .addTo(map);
+  </script>
