--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,6 +1,6 @@
 <h2>Login</h2>
 
-<form action="/login" method="POST" id="form-container">
+<form action="/auth/login" method="POST" id="form-container">
     <label for="username">Username</label>
     <input id="username" type="text" name="username" placeholder="JonSnow">
 
