--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -14,6 +14,6 @@
 
     <p class="account-message">
         Do you already have an account?
-        <a href="/login">Login</a>
+        <a href="/auth/login">Login</a>
     </p>
 </form>
