--- a/views/detail.hbs
+++ b/views/detail.hbs
@@ -92,3 +92,9 @@
       .setLngLat(coords)
       .addTo(map);
   </script>
+  <canvas id="bar-chart" width="600" height="350"></canvas>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+  <script
+    src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@0.7.0/dist/chartjs-plugin-datalabels.min.js"></script>
+  <script src="/javascripts/chart.js"></script>
