added classes and ids for styling

--- a/views/auth/user.hbs
+++ b/views/auth/user.hbs
@@ -1,3 +1,5 @@
-<h1>Welcome to user-page</h1>
-<p>save your favourite spot</p>
-<p>{{favourites}}</p>
+<div class="userpage-container">
+  <h1>Welcome {{result.username}}</h1>
+  <p>save your favourite spot</p>
+  <p class="saved-favourite">{{list}}</p>
+</div>
