--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,6 +1,6 @@
 <form action="/signup" method="POST" id="form-container">
     <label for="username">Username</label>
-    <input id="username" type="text" name="username" placeholder="JonSnow">
+    <input id="username" type="text" name="username" placeholder="JohnJohnFlorence">
     <br><br>
     <label for="password">Password</label>
     <input id="password" type="password" name="password" placeholder="Your password">
