--- a/views/home.hbs
+++ b/views/home.hbs
@@ -3,6 +3,8 @@
     <form action="/spotlist" method="GET">
         <label for="spots">Choose a break type</label>
         <select id="breaks" name="breaktypes">
+            <option></option>
+            <option value="[]">all types</option>
             <option value="beach">beach</option>
             <option value="reef">reef</option>
             <option value="point">point</option>
