--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,8 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
+html {
+  font-family: "Montserrat, Helvetica Neue, Helvetica Neue Regular, Helvetica Regular", "Helvetica", "Arial,sans-serif";
+  font-size: 16px; }
 
 a {
-  color: #00B7FF; }
+  color: #00b7ff; }
 
 /*# sourceMappingURL=style.css.map */
