--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -14,6 +14,7 @@
     <a href="/">Home</a>
     {{#if user}}
     <a href="/logout">Log out</a>
+    <a href="/auth/user">{{user.username}}</a>
     {{else}}
     <div><a href="/auth/signup">Sign Up!</a></div>
     <div><a href="/auth/login">Log In</a></div>
