--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,9 +11,9 @@
 
 <body>
   <nav class="navbar">
-    <a href="/">Home</a>
+    <div><a href="/">Home</a></div>
     {{#if user}}
-    <a href="/logout">Log out</a>
+    <div><a href="/logout">Log out</a></div>
     {{else}}
     <div><a href="/auth/signup">Sign Up!</a></div>
     <div><a href="/auth/login">Log In</a></div>
@@ -23,6 +23,7 @@
   {{{body}}}
 
   <script src="/javascripts/script.js"></script>
+
 </body>
 
 </html>
