--- a/views/spotlist.hbs
+++ b/views/spotlist.hbs
@@ -1,11 +1,13 @@
-<h1>Spots in Portugal</h1>
-<div class="spotlist-container">
-  {{#each obj}}
-  <div class="region-container">
-    <h2 id="region-name">{{@key}}</h2>
-    {{#each this}}
-    <p class="name-spot-list"><a href="spotlist/detail/{{this.id}}">{{this.name}}</a></p>
+<div class="spotlist-site">
+  <div class="spotlist-container">
+    <h1>Spots in Portugal</h1>
+    {{#each obj}}
+    <div class="region-container">
+      <h2 id="region-name">{{@key}}</h2>
+      {{#each this}}
+      <p class="name-spot-list"><a href="spotlist/detail/{{this.id}}">{{this.name}}</a></p>
+      {{/each}}
+    </div>
     {{/each}}
   </div>
-  {{/each}}
 </div>
