--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -97,20 +97,38 @@ select:focus::-ms-value {
   display: flex;
   justify-content: center; }
 
+.region-container {
+  background-color: #fff;
+  color: #262626;
+  width: 75vw; }
+
+#region-name {
+  font-weight: 300;
+  font-size: 2em; }
+
 .spotlist-container {
   font-weight: 200;
   margin: 5vh 0;
-  padding: 0 10vw;
-  max-width: 75vw;
+  padding: 0 30vw;
   display: flex;
   flex-direction: column;
   align-items: center;
-  text-align: center;
-  background-color: #e1e1e1; }
+  text-align: center; }
 
-.region-container p a {
+.spotlist-container h1 {
+  font-weight: 250;
+  font-size: 3em;
+  text-decoration: underline; }
+
+.region-spot {
+  background-color: #e1e1e1;
+  width: 75vw; }
+
+.region-spot p a {
   text-decoration: none;
-  color: #229fff; }
+  color: #229fff;
+  width: 75vw;
+  font-size: 1em; }
 
 #form-container {
   margin: 30px auto;
