--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -112,20 +112,43 @@ select:focus::-ms-value {
   justify-content: center;
 }
 
+.region-container {
+  background-color: #fff;
+  color: rgb(38, 38, 38);
+  width: 75vw;
+}
+
+#region-name {
+  font-weight: 300;
+  font-size: 2em;
+}
+
 .spotlist-container {
   font-weight: 200;
   margin: 5vh 0;
-  padding: 0 10vw;
-  max-width: 75vw;
+  padding: 0 30vw;
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
-  background-color: rgb(225, 225, 225);
 }
-.region-container p a {
+
+.spotlist-container h1 {
+  font-weight: 250;
+  font-size: 3em;
+  text-decoration: underline;
+}
+
+.region-spot {
+  background-color: rgb(225, 225, 225);
+  width: 75vw;
+}
+
+.region-spot p a {
   text-decoration: none;
   color: rgb(34, 159, 259);
+  width: 75vw;
+  font-size: 1em;
 }
 
 #form-container {
