--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -177,4 +177,7 @@ select:focus::-ms-value {
   padding: 20px;
   width: 100%; }
 
+#map {
+  margin: 0 25vw; }
+
 /*# sourceMappingURL=style.css.map */
