--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -203,3 +203,10 @@ select:focus::-ms-value {
   padding: 20px;
   width: 100%;
 }
+
+// #map {
+//   width: 100vw;
+//   display: flex;
+//   flex-direction: row;
+//   justify-content: center;
+// }
