--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -26,6 +26,7 @@ body {
 .navbar a {
   text-decoration: none;
   color: #ffffff;
+  font-weight: 100;
 }
 
 .home-container {
@@ -149,6 +150,106 @@ select:focus::-ms-value {
   color: rgb(34, 159, 259);
   width: 75vw;
   font-size: 1em;
+}
+
+.detail-container {
+  margin: 0;
+  margin-top: 1%;
+}
+
+.detail-container h1 {
+  font-weight: 100;
+  margin-left: 10vw;
+}
+
+.detail-container h2 {
+  font-weight: 200;
+}
+
+.detail-container h1,
+h2,
+h3 {
+  display: inline;
+}
+
+.detail-container form {
+  display: inline;
+}
+
+#favourite {
+  background-image: url(/images/star.png);
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  height: 32px;
+  width: 32px;
+  border: none;
+  transition: all ease-in-out 0.2s;
+  cursor: pointer;
+}
+#favourite:hover {
+  border: 1px solid rgb(34, 159, 259);
+  background-color: rgb(34, 159, 259);
+}
+
+#added {
+  display: inline;
+  color: rgb(34, 159, 259);
+}
+.detail-names {
+  display: inline;
+}
+
+.forecast-overview {
+  margin: 0 5rem;
+  margin-top: 2.5em;
+  line-height: 0.35;
+  display: flex;
+  justify-content: space-around;
+  align-items: stretch;
+  background-color: rgb(245, 245, 245);
+}
+
+#description-title {
+  font-weight: 100;
+  color: rgb(135, 155, 164);
+}
+
+.forecast-overview div {
+  padding: 2.5rem;
+}
+
+#recommendation-container {
+  background-color: rgb(230, 230, 230);
+  margin: 0 5rem;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+#recommendation-container p {
+  color: rgb(135, 155, 164);
+}
+
+#recommendation-container p span {
+  color: black;
+}
+
+.ideal-condition-overview {
+  display: flex;
+}
+
+#ideal-title {
+  margin-top: 1.75em;
+}
+
+#ideal-title h3 {
+  font-weight: 200;
+  margin-left: 10vw;
+  margin-top: 2.5em;
+  font-size: 2em;
+}
+
+button span {
+  display: none;
 }
 
 #form-container {
