--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -10,7 +10,7 @@
     {{/if}}
     <br><br>
 
-    <button>Create account</button>
+    <button type="submit">Create account</button>
 
     <p class="account-message">
         Do you already have an account?
