--- a/views/detail.hbs
+++ b/views/detail.hbs
@@ -10,7 +10,7 @@
 
   <script src="https://api.mapbox.com/mapbox-gl-js/v1.7.0/mapbox-gl.js"></script>
   <link href="https://api.mapbox.com/mapbox-gl-js/v1.7.0/mapbox-gl.css" rel="stylesheet" />
-  {{!-- <style>
+  {{!-- <style>ç
     #map {
       position: absolute;
       top: 0;
